# -*- makefile -*-
###########################################################################
## Filename:      Makefile.am
## Version:       $Id: Makefile.am,v 1.8 2000/01/20 22:46:22 erikm Exp $
## Copyright:     Copyright (C) 1999, Erik Mouw
## Author:        Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Description:   Makefile
## Created at:    Tue Aug 17 17:25:56 1999
## Modified by:   Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Modified at:   Tue Sep 28 23:36:51 1999
###########################################################################


noinst_HEADERS	= \
	clock.h \
	command.h \
	flash.h \
	main.h \
	registers.h \
	serial.h \
	time.h \
	types.h \
	util.h \
	uucodec.h


CLEANFILES	= *~
